src/test/ui/issues/issue-21177.stderr
error[E0391]: cycle detected when computing the bounds for type parameter `T`
  --> $DIR/issue-21177.rs:6:21
   |
LL | fn foo<T: Trait<A = T::B>>() { }
   |                     ^^^^
   |
   = note: ...which again requires computing the bounds for type parameter `T`, completing the cycle
note: cycle used when processing `foo`
  --> $DIR/issue-21177.rs:6:21
   |
LL | fn foo<T: Trait<A = T::B>>() { }
   |                     ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
